syntax = "proto3";

option go_package = "github.com/panagiotisptr/hermes-messenger/messaging/protos";

service Messaging {
  rpc SendMessage(SendMessageRequest) returns (SendMessageResponse);
  rpc GetMessages(GetMessagesRequest) returns (GetMessagesResponse);
}

message SendMessageRequest {
  string From = 1;
  string To = 2;
  string Content = 3;
}

message SendMessageResponse {}

message GetMessagesRequest {
  string From = 1;
  string To = 2;
  int64 Size = 3;
  int64 Offset = 4;
}

message Message {
  string From = 1;
  string To = 2;
  int64 Timestamp = 3;
  string Content = 4;
}

message GetMessagesResponse {
  repeated Message Messages = 1;
}
